--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 
 <html>
-<head>
+<head class="head">
   <title></title>
 </head>
 <body>
-  
+  <header>
+
+  </header>
+<p></p>  
 </body>
 </html> 
 
